# Low-Latency-Telemetry-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/receiver/: main.cpp
apps/simulator/: main.cpp
benchmarks/: benchmark_summary.md
include/llte/core/: engine.hpp
include/llte/network/: udp_receiver.hpp  udp_sender.hpp
include/llte/queue/: spsc_queue.hpp
include/llte/telemetry/: packet.hpp
src/core/: engine.cpp
src/network/: udp_receiver.cpp  udp_sender.cpp
tests/: queue_test.cpp
